# turkce-compiler

./: .gittignore  README.md  baslat.bat  test_ilk.ilk
core/: CMakeLists.txt
core/src/: AST.h  Debugger.h  Evaluator.cpp  Evaluator.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Token.h  main.cpp
examples/: fibonacci.ilk  merhaba.ilk
server/: index.js  package-lock.json  package.json
stdlib/: matematik.ilk  metin.ilk
temp/: kod_mmuqvlc1dcmagl1ifm.ilk
ui/: index.html
ui/js/: app.js  editor.js
